Fixed dialog presentation on mobile

--- a/src/app/components/dialog/dialog.component.scss
+++ b/src/app/components/dialog/dialog.component.scss
@@ -2,9 +2,11 @@ $spacing: 20px;
 
 @media screen and (orientation: portrait) and (max-width: 480px) {
   .mat-mdc-card {
-    max-width: unset !important;
-    height: 100vh;
-    width: 100vw;
+    min-height: 100vh;
+    min-width: 100vw;
+  }
+  .mat-mdc-dialog-content {
+    max-height: calc(100vh - 149px);
   }
 }
 
